Properly kill AddToArchive jobs

Both AddToArchive and CreateJob are wrapper jobs, they need to implement
doKill() and call kill() on the actual jobs that are doing the work.

BUG: 374433
FIXED-IN: 16.12.1

Differential Revision: D4000